# src

./: .demo.cpp.swp  README.md
cam/: CMakeLists.txt  package.xml
cam/include/: cam.h
cam/src/: cam.cpp  main.cpp
face_recog/: CMakeLists.txt  package.xml
face_recog/include/: face_recog.h
face_recog/src/: face_recog.cpp  face_recog_main.cpp
gazebo_ipbot/: CMakeLists.txt  package.xml  thres.config
gazebo_ipbot/include/: cmd_vel.h  img_cap.h
gazebo_ipbot/msg/: pid.msg  tuning.msg
gazebo_ipbot/src/: cmd_vel.cpp  img_cap.cpp  img_cap_ard.cpp  img_cap_main.cpp
gazebo_ipbot/src/cmd_vel/: cmd_vel_main.cpp
gazebo_ipbot/src/img_cap/: img_cap.cpp
gazebo_ipbot_qt/: CMakeLists.txt  package.xml
gazebo_ipbot_qt/include/: mainwindow.h
gazebo_ipbot_qt/msg/: pid.msg
gazebo_ipbot_qt/src/: main.cpp  mainwindow.cpp
gazebo_ipbot_qt/ui/: mainwindow.ui
imgtransport/: CMakeLists.txt  package.xml
imgtransport/src/: itnode1.cpp  itnode11.cpp  itnode2.cpp  itnode3.cpp
inrange_qt/: CMakeLists.txt  package.xml
inrange_qt/include/: mainwindow.h
inrange_qt/src/: mainwindow.cpp
inrange_qt/ui/: mainwindow.ui
ip_robosub/: CMakeLists.txt  package.xml
ip_robosub/src/: gate_thres.txt  ip_robosub.cpp  ip_robosub2.cpp  test.cpp
ip_room/: CMakeLists.txt  package.xml
ip_room/src/: basic_motion.cpp  bgSub.cpp  concat.cpp  concat_image.cpp  ip_room.cpp  main.cpp  main1.cpp  main2.cpp  motion.cpp  single_obj_tracker.cpp
line_follower/: CMakeLists.txt
line_follower/models/hokuyo/: model.sdf
line_follower/models/kinect/: model.config  model.sdf
line_follower/models/path/: model.sdf
line_follower/models/playground/: model.sdf
line_follower/models/qt_pi_kinect/: model.config  model.sdf
line_follower/models/qt_pi_laser/: model.config  model.sdf
line_follower/models/qt_pi_rgb/: model.config  model.sdf
line_follower/src/: camera.cpp
line_follower/worlds/: line_follower.world
mybot/gazebo_node/: CMakeLists.txt  package.xml
mybot/gazebo_node/msg/: Combined.msg
mybot/gazebo_node/src/: HSV_track_bar.cpp  READ_ME  depth_processing.cpp  img_pro_cal.cpp  motion_pub.cpp  motion_pub2.cpp  raw_img_cap.cpp
mybot/mybot_description/urdf/: mybot.gazebo  mybot.xacro
pi_ipbot/: CMakeLists.txt  package.xml
pi_ipbot/config/: pid.conf
pi_ipbot/include/pi_cam/: pi_cam.h
pi_ipbot/include/pi_controller/: mainwindow.h
pi_ipbot/include/pi_motor/: pi_motor.h
pi_ipbot/msg/: pid_pi.msg
pi_ipbot/src/: inv_prosp_map.cpp  main.cpp  pi_ipbot.py
pi_ipbot/src/pi_cam/: main.cpp  pi_cam.cpp
pi_ipbot/src/pi_controller/: main.cpp  mainwindow.cpp
pi_ipbot/src/pi_motor/: main.cpp  pi_motor.cpp
pi_ipbot/ui/: mainwindow.ui
pyserial_mpu/: CMakeLists.txt  package.xml
pyserial_mpu/src/: pub.py  pyserial_mpu.cpp
pyserial_room/: CMakeLists.txt  package.xml
pyserial_room/src/: main.cpp  node.py
qt_plot/: CMakeLists.txt  package.xml
qt_plot/include/: mainwindow.h
qt_plot/src/: main.cpp
qtnode2/: CMakeLists.txt  package.xml
qtnode2/include/: qtnode2.h
qtnode2/src/: main2.cpp  qtnode2.cpp
qtnode2/ui/: mainwindow.ui
qtnode3/: CMakeLists.txt  package.xml
qtnode3/include/: qtnode3.h
qtnode3/src/: main3.cpp  qtnode3.cpp
qtnode3/ui/: mainwindow.ui
taskv/: CMakeLists.txt  package.xml
taskv/src/: img.cpp  taskv.cpp
tiburon_controller/: CMakeLists.txt  package.xml
tiburon_controller/config/: pid.conf
tiburon_controller/include/: mainwindow.h
tiburon_controller/msg/: pid_tuning.msg
tiburon_controller/src/: array.cpp  main.cpp  mainwindow.cpp
tiburon_controller/ui/: mainwindow.ui
tiburon_controller_old/: CMakeLists.txt
tiburon_controller_old/config/: pid.conf
tiburon_controller_old/src/: mainwindow.cpp
tiburon_pid/: CMakeLists.txt  package.xml
tiburon_pid/include/: tiburon_pid.h
tiburon_pid/msg/: rqt.msg
tiburon_pid/src/: drone_flight_control.cpp  main.cpp  pid.cpp  ros.cpp  tiburon_pid.cpp  tiburon_pid_cmd.cpp  tiburon_pid_test.cpp  tiburon_pid_test1.cpp
tiburon_pid/src/Tests/: tiburon_pid_test.cpp
