<?xml version="1.0"?>
<package format="2">
  <name>pi_ipbot</name>
  <version>0.0.0</version>
  <description>The pi_ipbot package</description>

  <maintainer email="arnabgudu.gs@gmail.com">lucifer</maintainer>

  <license>Arnab Paikaray</license>
  
  <maintainer email="arnabgudu.gs@gmail.com">lucifer</maintainer>
  <license>NITRKL</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>genmsg</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <export>
 
  </export>
</package>
