<?xml version="1.0"?>
<package>
  <name>qt_plot</name>
  <version>0.0.0</version>
  <description>A qt app for hydrophone plot</description>
  <maintainer email="118ce0632@nitrkl.ac.in">Arnab Paikaray</maintainer>
  <license>BSD</license>
  <author email="118ce0632@nitrkl.ac.in">Arnab Paikaray</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
</package>
