<?xml version="1.0"?>
<package>
  <name>tiburon_controller</name>
  <version>0.0.0</version>
  <description>A qt app to control tiburon bot using keyboard</description>
  <maintainer email="arnabgudu.gs@gmail.com">Arnab</maintainer>
  <license>NITRKL</license>
  <author email="arnabgudu.gs@gmail.com">Arnab</author>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>genmsg</buildtool_depend>

  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
 
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend> 
  <run_depend>message_runtime</run_depend>

</package>
